# django_twitter_clone

./: .gitignore  pyproject.toml
authentication/: forms.py  urls.py  views.py
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_notification_tweet.py  0003_notification_user.py
static/main/: style.css
templates/: create_account.html  home.html  main.html  notify.html  post_tweet.html  tweet_page.html  user_page.html
tweet/: forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_created_by.py
twitterclone/: settings.py  urls.py
twitteruser/: forms.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20200225_2040.py  0002_customuser_followers.py  0003_auto_20200225_2114.py  0004_auto_20200225_2115.py
